Resolved problem with label overlapping after setting some value in Autocomplete

--- a/assets/scss/angular/free/_modals.scss
+++ b/assets/scss/angular/free/_modals.scss
@@ -419,7 +419,8 @@ body {
 
 @media (min-width: 768px){
   .modal-sm{
-    max-width: 100%;
+    // max-width: 100%;
+    max-width: 300px;
   }
 }
 
